--- a/less/menus.less
+++ b/less/menus.less
@@ -20,6 +20,13 @@
   }
 }
 
+@media (max-width: @screen-md-min) {
+  .main-container > div > section.col-sm-9{
+    padding-top:0 !important;
+  }
+}
+
+
 @media @normal {
   .menuparent {
     > li > a {
